Aggiunta stato End Game Player